Change Collector to List